style.css
/* https://www.color-hex.com/color-palette/6409 */
:root {
  --espeon-blue: #294974;
  --espeon-purple: #926ecc;
  --espeon-purple-light: #dbb2e3;
  --espeon-purple-dark: #8653b2;
  --espeon-red: #e73752;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  font-family: Arial, sans-serif;
  background-color: var(--espeon-blue);
}

.form_main,
#form_login_card {
  background-color: var(--espeon-purple-light);
  padding: 20px;
  border-radius: 5px;
}

.form-container,
.form-container select {
  width: 100%;
}

.main_card label,
.form-container label {
  color: var(--espeon-blue);
  font-weight: bold;
  font-size: 1.2em;
}

.form-container input,
.form-container label,
.form-container select {
  margin-bottom: 2px;
}

.main_card input,
.form-container input,
.form-container select,
.btns {
  padding: 10px;
  border: none;
  border-radius: 2px;
  background-color: var(--espeon-blue);
  color: var(--espeon-red);
  font-weight: bold;
  align-self: center;
}

.underline_btn {
  border: none;
  background-color: transparent;
  color: var(--espeon-blue);
  text-decoration: underline;
  font-size: 1em;
}

.btns,
.underline_btn {
  display: flex;
  justify-content: center;
  margin: 8px auto;
}

.form_body {
  padding: 20px;
}

.form_footer {
  display: flex;
  justify-content: center;
}

.form_header {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.form_body,
.register_form,
.form_login_main,
.register_form h1 {
  margin: 10px;
  color: var(--espeon-blue);
}

.form_body h1,
.form_login_main h1,
.register_form h1 {
  text-align: center;
}

.clipboard_container {
  display: flex;
  flex-direction: row;
  padding: 10px;
}

.clipboard_text {
  background-color: white;
  padding: 10px;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.main_card {
  margin: 20px;
}

.description {
  display: flex;
  align-items: center;
  flex-direction: column;
  background-color: var(--espeon-purple-light);
  padding: 20px;
  padding-top: 40px;
  padding-bottom: 40px;
  border: none;
  border-radius: 4px;
  margin: 10px;
}

.description button {
  width: 40%;
}

.form_login_main h1 {
  color: var(--espeon-purple-light);
}

.lecture_input {
  margin-bottom: 30px;
}

.espeon_face_container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.nav_container {
  margin: 20px;
  /* background-color: var(--espeon-purple-dark); */
}

.nav_container ul {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 8px;
  list-style: none;
  padding: 0;
}

.nav_button li {
  width: 80px;
  height: 80px;
  background-color: var(--espeon-red);
  border-radius: 50%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  gap: 4px;
  align-items: center;
  color: white;
  font-weight: bold;
  box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.25);
  cursor: pointer;
}

.nav_button span {
  font-size: 0.7em;
}

.nav_button img {
  width: 3em;
}
.nav_item_container {
  display: flex;
  align-items: center;
  gap: 8px;
  cursor: pointer;
}

#form_login_header {
  background-color: transparent;
}

#form_login {
  color: var(--espeon-purple-light);
  background-color: var(--espeon-purple-light);
  padding: 10px;
  border-radius: 5px;
}

#form_login label {
  font-size: 20px;
  letter-spacing: 2px;
}

#form_lecture {
  /* padding: 10px; */
  border-radius: 5px;
  display: flex;
  flex-direction: column; /* coloca os campos em coluna */
  gap: 12px; /* espaço vertical entre cada elemento */
}

#form_lecture_main{
  width: 30em;
}

#form_lecture label {
  font-size: 16px;
  width: 100%;
}

#form_lecture input {
  width: 100%;
}

#footer_lecture {
  display: flex;
  flex-direction: column; 
  align-items: center;    
  gap: 8px;               
}

.footer_back_btn,  #regex{
  background-color: var(--espeon-red);
  text-transform: uppercase;
  font-weight: bolder;
  text-decoration: none;
  color: white;
  padding: 10px;
  border-radius: 5px;
  width: 100%;
  cursor: pointer;
}

#espeon_image {
  display: flex;
  align-self: center;
}

#exit {
  color: var(--espeon-red);
  font-weight: bold;
  margin: 10px;
}

#lecture_title {
  margin-top: 10px;
}

#lecture_content {
  color: var(--espeon-blue);
}

#back_lecture {
  margin-top: 10px;
  padding: 10px;
  border-radius: 4px;
  border: none;
  background-color: var(--espeon-blue);
  color: var(--espeon-red);
  text-transform: uppercase;
  font-weight: bold;
}

#copy {
  background-color: var(--espeon-blue);
  border-right: 1px;
  color: var(--espeon-purple-light);
  text-transform: uppercase;
  font-weight: bolder;
  padding: 10px;
  border: none;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

#start {
  background-color: var(--espeon-red);
  color: white;
  font-weight: bold;
  padding: 10px;
  border-radius: 4px;
  border: none;
}

#stop {
  background-color: var(--espeon-blue);
  color: white;
  font-weight: bold;
  padding: 10px;
  border-radius: 4px;
  border: none;
}

#shadow {
  box-shadow: 8px 8px 4px 0 rgba(0, 0, 0, 0.25);
  width: 30em;
}

#espeon-face {
  width: 15em;
  min-width: 12%;
}

#regex{
  background-color: var(--espeon-blue);
  color: white;
}

